# conference_blog_service

./: .gitignore  README.md  docker-compose.yaml
docker/: docker-compose.yaml
docker/proxysql/: proxysql.cnf
docs/architecture/: components.md  context.md  task.md
docs/stress_tests/: readme.md
sources/: CMakeLists.txt
sources/articles_service/: CMakeLists.txt  Dockerfile  index.yaml  main.cpp
sources/articles_service/database/include/database/: article.h  database.h
sources/articles_service/database/src/: article.cpp  user_role.cpp
sources/articles_service/mariadb/: create_tables.sql
sources/articles_service/service/: http_request_factory.h  http_server.cpp  server_config.json
sources/articles_service/service/config/: path_validate.h  server_config.cpp  server_config.h
sources/articles_service/service/handlers/article/: article_handler.cpp  article_handler.h
sources/articles_service/service/handlers/interface/: handler_factory.h  i_request_handler.cpp  i_request_handler.h
sources/articles_service/service/handlers/search/: search_handler.cpp
sources/conference_service/: CMakeLists.txt  Dockerfile  index.yaml
sources/conference_service/database/include/database/: article.h
sources/conference_service/database/src/: article.cpp
sources/conference_service/service/: http_server.cpp  server_config.json
sources/conference_service/service/config/: path_validate.cpp
sources/conference_service/service/handlers/article/: article_handler.cpp  article_handler.h
sources/conference_service/service/handlers/interface/: handler_factory.cpp  handler_type.h  i_request_handler.cpp  i_request_handler.h
sources/search_service/: CMakeLists.txt  index.yaml  main.cpp
sources/search_service/database/: database.cpp  database.h  user.cpp  user.h
sources/search_service/service/: http_request_factory.h  http_server.cpp  http_server.h
sources/search_service/service/handlers/: user_handler.cpp  user_handler.h
sources/shared/: errors.cpp  errors.h
sources/users_service/: CMakeLists.txt  Dockerfile  helper.h  index.yaml
sources/users_service/database/: user.cpp
sources/users_service/database/include/database/: cache.h  database.h  user.h  user_role.h
sources/users_service/database/src/: cache.cpp  database.cpp  user.cpp
sources/users_service/init_db/: CMakeLists.txt  load_data.cpp
sources/users_service/service/: http_request_factory.h  http_server.cpp  http_server.h  server_config.json
sources/users_service/service/config/: server_config.cpp  server_config.h
sources/users_service/service/handlers/auth/: auth_handler.cpp  auth_handler.h
sources/users_service/service/handlers/interface/: handler_factory.cpp  handler_factory.h  handler_type.h  i_request_handler.cpp  i_request_handler.h
sources/users_service/service/handlers/search/: search_handler.cpp  search_handler.h
sources/users_service/service/handlers/user/: user_handler.cpp  user_handler.h
sources/users_service/stress_test/: get_cached.lua  get_no_cache.lua  run_stress.sh
