cmake_minimum_required(VERSION 3.2)

SET (PROJECT_NAME search_service)
SET (EXECUTABLE_NAME ${PROJECT_NAME})

project(${PROJECT_NAME} C CXX)

SET (CMAKE_CXX_STANDARD 17)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(OpenSSL)
find_package(Threads)
find_package(ZLIB)
find_package(Poco REQUIRED COMPONENTS Foundation Util Net XML JSON Crypto NetSSL)

if(NOT ${Poco_FOUND})
    message(FATAL_ERROR "Poco C++ Libraries not found.")
endif()

include_directories(${Poco_INCLUDE_DIRS})
include_directories("/usr/include/mysql")
include_directories("/usr/local/include/mysql")
link_directories("/usr/local/lib")

add_executable(${EXECUTABLE_NAME}
        main.cpp
        database/user.cpp
        database/database.cpp

        service/config/path_validate.cpp
        service/config/server_config.cpp
        service/handlers/user_handler.cpp

        service/http_server.cpp
        ../shared/errors.cpp
)

target_include_directories(${EXECUTABLE_NAME} PRIVATE "${CMAKE_BINARY_DIR}")
target_include_directories(${EXECUTABLE_NAME} PRIVATE "../shared")

target_compile_options(${EXECUTABLE_NAME} PRIVATE -Wall -Wextra -pedantic -Werror )
set_target_properties(${EXECUTABLE_NAME} PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(${EXECUTABLE_NAME} PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)

target_link_libraries(${EXECUTABLE_NAME} PRIVATE
        ${CMAKE_THREAD_LIBS_INIT}
        ${Poco_LIBRARIES}
        "PocoData"
        "PocoDataMySQL"
        "mysqlclient"
        ZLIB::ZLIB)

